Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23330

Broken code analysis

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.11.1
    • Qt Creator 4.11.0-rc1, Qt Creator 4.11.0
    • C/C++/Obj-C++ Support
    • None
    • Linux/X11

      I compiled Qt Creator 4.11.0-rc1 on my Gentoo box. I have completely broken code completion and analysis. Not sure what is a cause, 4.10.2 works fine. Some details are here https://github.com/dev-0x7C6/dev1990-overlay/issues/2

      Logs from code model:

      qglobal.h:45:12: fatal error: 'type_traits' file not found
      color-format-enum.h:1:1: note: in file included from /home/dev/development/projects/current/led/led-frame/core/enums/color-format-enum.h:1:
      color-format-enum.h:3:10: note: in file included from /home/dev/development/projects/current/led/led-frame/core/enums/color-format-enum.h:3:
      QString:1:10: note: in file included from /opt/qtsdk/qtsdk-linux-g++-5.12.5/include/QtCore/QString:1:
      qstring.h:48:10: note: in file included from /opt/qtsdk/qtsdk-linux-g++-5.12.5/include/QtCore/qstring.h:48:
      qchar.h:43:10: note: in file included from /opt/qtsdk/qtsdk-linux-g++-5.12.5/include/QtCore/qchar.h:43:
      qglobal.h:1213:10: note: in file included from /opt/qtsdk/qtsdk-linux-g++-5.12.5/include/QtCore/qglobal.h:1213:
      qversiontagging.h:41:10: note: in file included from /opt/qtsdk/qtsdk-linux-g++-5.12.5/include/QtCore/qversiontagging.h:41:

      Environment:

      QMake version 3.1 
      Using Qt version 5.13.2 in /usr/lib64
      
      clang version 8.0.1 (tags/RELEASE_801/final) 
      Target: x86_64-pc-linux-gnu 
      Thread model: posix 
      InstalledDir: /usr/lib/llvm/8/bin 
      Selected GCC installation: /usr/lib/gcc/x86_64-pc-linux-gnu/9.2.0 
      Candidate multilib: .;@m64 
      Candidate multilib: 32;@m32 
      Selected multilib: .;@m64
      
      ldd /usr/libexec/qtcreator/clangbackend 
             linux-vdso.so.1 (0x00007ffe459be000) 
             libSqlite.so.4 => /usr/libexec/qtcreator/../../lib64/qtcreator/libSqlite.so.4 (0x00007fb57967d000) 
             libClangsupport.so.4 => /usr/libexec/qtcreator/../../lib64/qtcreator/libClangsupport.so.4 (0x00007fb5795fb000) 
             libUtils.so.4 => /usr/libexec/qtcreator/../../lib64/qtcreator/libUtils.so.4 (0x00007fb579348000) 
             libclang.so.8 => /usr/lib/llvm/8/lib64/libclang.so.8 (0x00007fb5792b1000) 
             libQt5Network.so.5 => /usr/lib64/libQt5Network.so.5 (0x00007fb5790a3000) 
             libQt5Core.so.5 => /usr/lib64/libQt5Core.so.5 (0x00007fb578b9a000) 
             libstdc++.so.6 => /usr/lib/gcc/x86_64-pc-linux-gnu/9.2.0/libstdc++.so.6 (0x00007fb578911000) 
             libgcc_s.so.1 => /usr/lib/gcc/x86_64-pc-linux-gnu/9.2.0/libgcc_s.so.1 (0x00007fb5788f8000) 
             libc.so.6 => /lib64/libc.so.6 (0x00007fb57872b000) 
             libdl.so.2 => /lib64/libdl.so.2 (0x00007fb578725000) 
             libpthread.so.0 => /lib64/libpthread.so.0 (0x00007fb578703000) 
             /lib64/ld-linux-x86-64.so.2 (0x00007fb579832000) 
             libQt5Widgets.so.5 => /usr/lib64/libQt5Widgets.so.5 (0x00007fb578066000) 
             libQt5Gui.so.5 => /usr/lib64/libQt5Gui.so.5 (0x00007fb577b3e000) 
             libQt5Qml.so.5 => /usr/lib64/libQt5Qml.so.5 (0x00007fb577670000) 
             libQt5Xml.so.5 => /usr/lib64/libQt5Xml.so.5 (0x00007fb577630000) 
             libclangARCMigrate.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangARCMigrate.so.8 (0x00007fb577375000) 
             libclangTidyPlugin.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangTidyPlugin.so.8 (0x00007fb577337000) 
             libclangIncludeFixerPlugin.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangIncludeFixerPlugin.so.8 (0x00007fb577326000) 
             libLLVMPowerPCCodeGen.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMPowerPCCodeGen.so.8 (0x00007fb5771b1000) 
             libLLVMPowerPCAsmParser.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMPowerPCAsmParser.so.8 (0x00007fb57718f000) 
             libLLVMPowerPCDesc.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMPowerPCDesc.so.8 (0x00007fb577114000) 
             libLLVMPowerPCInfo.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMPowerPCInfo.so.8 (0x00007fb577111000) 
             libLLVMAMDGPUCodeGen.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMAMDGPUCodeGen.so.8 (0x00007fb576e03000) 
             libLLVMAMDGPUAsmParser.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMAMDGPUAsmParser.so.8 (0x00007fb576d3a000) 
             libLLVMAMDGPUDesc.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMAMDGPUDesc.so.8 (0x00007fb576b69000) 
             libLLVMAMDGPUInfo.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMAMDGPUInfo.so.8 (0x00007fb576b66000) 
             libLLVMBPFCodeGen.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMBPFCodeGen.so.8 (0x00007fb576b20000) 
             libLLVMBPFAsmParser.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMBPFAsmParser.so.8 (0x00007fb576b16000) 
             libLLVMBPFDesc.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMBPFDesc.so.8 (0x00007fb576b05000) 
             libLLVMBPFInfo.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMBPFInfo.so.8 (0x00007fb576b00000) 
             libLLVMNVPTXCodeGen.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMNVPTXCodeGen.so.8 (0x00007fb576a4f000) 
             libLLVMNVPTXDesc.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMNVPTXDesc.so.8 (0x00007fb5769c4000) 
             libLLVMNVPTXInfo.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMNVPTXInfo.so.8 (0x00007fb5769c1000) 
             libLLVMX86CodeGen.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMX86CodeGen.so.8 (0x00007fb5765b4000) 
             libLLVMX86AsmParser.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMX86AsmParser.so.8 (0x00007fb57650d000) 
             libLLVMX86Desc.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMX86Desc.so.8 (0x00007fb5762f0000) 
             libLLVMX86Info.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMX86Info.so.8 (0x00007fb5762ed000) 
             libLLVMAArch64CodeGen.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMAArch64CodeGen.so.8 (0x00007fb57606e000) 
             libLLVMAArch64AsmParser.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMAArch64AsmParser.so.8 (0x00007fb575f87000) 
             libLLVMAArch64Desc.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMAArch64Desc.so.8 (0x00007fb575e8c000) 
             libLLVMAArch64Info.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMAArch64Info.so.8 (0x00007fb575e89000) 
             libLLVMARMCodeGen.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMARMCodeGen.so.8 (0x00007fb575bfe000) 
             libLLVMARMAsmParser.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMARMAsmParser.so.8 (0x00007fb575b76000) 
             libLLVMARMDesc.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMARMDesc.so.8 (0x00007fb575a88000) 
             libLLVMARMInfo.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMARMInfo.so.8 (0x00007fb575a84000) 
             libclangIndex.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangIndex.so.8 (0x00007fb575a34000) 
             libclangTooling.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangTooling.so.8 (0x00007fb5759a7000) 
             libclangFrontend.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangFrontend.so.8 (0x00007fb57581e000) 
             libclangSerialization.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangSerialization.so.8 (0x00007fb57564d000) 
             libclangSema.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangSema.so.8 (0x00007fb574d63000) 
             libclangAST.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangAST.so.8 (0x00007fb5748c1000) 
             libclangLex.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangLex.so.8 (0x00007fb5747e9000) 
             libclangBasic.so.8 => /usr/lib/llvm/8/lib64/../lib64/libclangBasic.so.8 (0x00007fb5744a5000) 
             libLLVMSupport.so.8 => /usr/lib/llvm/8/lib64/../lib64/libLLVMSupport.so.8 (0x00007fb5742cb000) 
             libz.so.1 => /lib64/libz.so.1 (0x00007fb5742b1000) 
             libssl.so.1.1 => /usr/lib64/libssl.so.1.1 (0x00007fb574221000) 
             libcrypto.so.1.1 => /usr/lib64/libcrypto.so.1.1 (0x00007fb573f60000) 
             libsystemd.so.0 => /lib64/libsystemd.so.0 (0x00007fb573ea4000) 
             libicui18n.so.65 => /usr/lib64/libicui18n.so.65 (0x00007fb573bae000) 
             libicuuc.so.65 => /usr/lib64/libicuuc.so.65 (0x00007fb5739ce000) 
             libpcre2-16.so.0 => /usr/lib64/libpcre2-16.so.0 (0x00007fb57394e000) 
             libdouble-conversion.so.3 => /usr/lib64/libdouble-conversion.so.3 (0x00007fb573940000) 
             libzstd.so.1 => /usr/lib64/libzstd.so.1 (0x00007fb5738ac000) 
             libglib-2.0.so.0 => /usr/lib64/libglib-2.0.so.0 (0x00007fb57378c000) 
             libm.so.6 => /lib64/libm.so.6 (0x00007fb57364c000) 
             libGL.so.1 => /usr/lib64/libGL.so.1 (0x00007fb5735d4000) 
             libpng16.so.16 => /usr/lib64/libpng16.so.16 (0x00007fb57359c000) 
             libharfbuzz.so.0 => /usr/lib64/libharfbuzz.so.0 (0x00007fb57349f000) 
             libclangStaticAnalyzerCore.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangStaticAnalyzerCore.so.8 (0x00007fb573235000) 
             libclangAnalysis.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangAnalysis.so.8 (0x00007fb573116000) 
             libclangEdit.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangEdit.so.8 (0x00007fb573106000) 
             libclangRewrite.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangRewrite.so.8 (0x00007fb5730f4000) 
             libclangTidyAbseilModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyAbseilModule.so.8 (0x00007fb57305e000) 
             libclangTidyAndroidModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyAndroidModule.so.8 (0x00007fb573005000) 
             libclangTidyBoostModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyBoostModule.so.8 (0x00007fb572fbe000) 
             libclangTidyCERTModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyCERTModule.so.8 (0x00007fb572f45000) 
             libclangTidyFuchsiaModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyFuchsiaModule.so.8 (0x00007fb572ef1000) 
             libclangTidyHICPPModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyHICPPModule.so.8 (0x00007fb572e90000) 
             libclangTidyLLVMModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyLLVMModule.so.8 (0x00007fb572e4a000) 
             libclangTidyObjCModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyObjCModule.so.8 (0x00007fb572e02000) 
             libclangTidyPerformanceModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyPerformanceModule.so.8 (0x00007fb572d5a000) 
             libclangTidyPortabilityModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyPortabilityModule.so.8 (0x00007fb572d19000) 
             libclangTidyZirconModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyZirconModule.so.8 (0x00007fb572cd7000) 
             libclangTidyMPIModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyMPIModule.so.8 (0x00007fb572c92000) 
             libclangTidyBugproneModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyBugproneModule.so.8 (0x00007fb572b39000) 
             libclangTidyCppCoreGuidelinesModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyCppCoreGuidelinesModule.so.8 (0x00007fb572a6e000) 
             libclangTidyGoogleModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyGoogleModule.so.8 (0x00007fb5729f1000) 
             libclangTidyMiscModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyMiscModule.so.8 (0x00007fb572903000) 
             libclangTidyModernizeModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyModernizeModule.so.8 (0x00007fb572686000) 
             libclangTidyReadabilityModule.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidyReadabilityModule.so.8 (0x00007fb57251a000) 
             libclangTidy.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangTidy.so.8 (0x00007fb572498000) 
             libclangASTMatchers.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangASTMatchers.so.8 (0x00007fb5723fe000) 
             libclangIncludeFixer.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangIncludeFixer.so.8 (0x00007fb5723d3000) 
             libLLVMAnalysis.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMAnalysis.so.8 (0x00007fb571ff3000) 
             libLLVMAsmPrinter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMAsmPrinter.so.8 (0x00007fb571f19000) 
             libLLVMCodeGen.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMCodeGen.so.8 (0x00007fb571a31000) 
             libLLVMCore.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMCore.so.8 (0x00007fb57172c000) 
             libLLVMMC.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMMC.so.8 (0x00007fb57165b000) 
             libLLVMPowerPCAsmPrinter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMPowerPCAsmPrinter.so.8 (0x00007fb57163e000) 
             libLLVMScalarOpts.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMScalarOpts.so.8 (0x00007fb571311000) 
             libLLVMSelectionDAG.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMSelectionDAG.so.8 (0x00007fb570ff5000) 
             libLLVMTarget.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMTarget.so.8 (0x00007fb570fe6000) 
             libLLVMTransformUtils.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMTransformUtils.so.8 (0x00007fb570e09000) 
             libLLVMMCParser.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMMCParser.so.8 (0x00007fb570dbc000) 
             libLLVMAMDGPUAsmPrinter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMAMDGPUAsmPrinter.so.8 (0x00007fb570d7e000) 
             libLLVMAMDGPUUtils.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMAMDGPUUtils.so.8 (0x00007fb570d42000) 
             libLLVMBinaryFormat.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMBinaryFormat.so.8 (0x00007fb570d20000) 
             libLLVMGlobalISel.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMGlobalISel.so.8 (0x00007fb570ca0000) 
             libLLVMVectorize.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMVectorize.so.8 (0x00007fb570bbb000) 
             libLLVMipo.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMipo.so.8 (0x00007fb570a61000) 
             libLLVMBPFAsmPrinter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMBPFAsmPrinter.so.8 (0x00007fb570a5b000) 
             libLLVMNVPTXAsmPrinter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMNVPTXAsmPrinter.so.8 (0x00007fb570a37000) 
             libLLVMProfileData.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMProfileData.so.8 (0x00007fb5709d3000) 
             libLLVMX86AsmPrinter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMX86AsmPrinter.so.8 (0x00007fb570979000) 
             libLLVMX86Utils.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMX86Utils.so.8 (0x00007fb570972000) 
             libLLVMMCDisassembler.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMMCDisassembler.so.8 (0x00007fb57096a000) 
             libLLVMAArch64AsmPrinter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMAArch64AsmPrinter.so.8 (0x00007fb5708ce000) 
             libLLVMAArch64Utils.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMAArch64Utils.so.8 (0x00007fb5708a3000) 
             libLLVMARMAsmPrinter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMARMAsmPrinter.so.8 (0x00007fb570882000) 
             libLLVMARMUtils.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMARMUtils.so.8 (0x00007fb57087c000) 
             libclangFormat.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangFormat.so.8 (0x00007fb5707dd000) 
             libclangToolingCore.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangToolingCore.so.8 (0x00007fb5707c7000) 
             libclangDriver.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangDriver.so.8 (0x00007fb5705b8000) 
             libLLVMOption.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMOption.so.8 (0x00007fb5705a6000) 
             libclangParse.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libclangParse.so.8 (0x00007fb570484000) 
             libLLVMBitReader.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMBitReader.so.8 (0x00007fb570419000) 
             libtinfo.so.6 => /lib64/libtinfo.so.6 (0x00007fb5703dc000) 
             libLLVMDemangle.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/libLLVMDemangle.so.8 (0x00007fb57039b000) 
             librt.so.1 => /lib64/librt.so.1 (0x00007fb570391000) 
             liblz4.so.1 => /usr/lib64/liblz4.so.1 (0x00007fb570370000) 
             libcap.so.2 => /lib64/libcap.so.2 (0x00007fb570368000) 
             libgcrypt.so.20 => /usr/lib64/libgcrypt.so.20 (0x00007fb570249000) 
             libicudata.so.65 => /usr/lib64/libicudata.so.65 (0x00007fb56e796000) 
             libpcre.so.1 => /lib64/libpcre.so.1 (0x00007fb56e724000) 
             libglapi.so.0 => /usr/lib64/libglapi.so.0 (0x00007fb56e6ed000) 
             libdrm.so.2 => /usr/lib64/libdrm.so.2 (0x00007fb56e6da000) 
             libX11.so.6 => /usr/lib64/libX11.so.6 (0x00007fb56e598000) 
             libxcb-glx.so.0 => /usr/lib64/libxcb-glx.so.0 (0x00007fb56e577000) 
             libxcb.so.1 => /usr/lib64/libxcb.so.1 (0x00007fb56e54c000) 
             libX11-xcb.so.1 => /usr/lib64/libX11-xcb.so.1 (0x00007fb56e549000) 
             libxcb-dri2.so.0 => /usr/lib64/libxcb-dri2.so.0 (0x00007fb56e542000) 
             libXext.so.6 => /usr/lib64/libXext.so.6 (0x00007fb56e52d000) 
             libXfixes.so.3 => /usr/lib64/libXfixes.so.3 (0x00007fb56e525000) 
             libXdamage.so.1 => /usr/lib64/libXdamage.so.1 (0x00007fb56e51f000) 
             libXxf86vm.so.1 => /usr/lib64/libXxf86vm.so.1 (0x00007fb56e518000) 
             libexpat.so.1 => /usr/lib64/libexpat.so.1 (0x00007fb56e4eb000) 
             libxcb-dri3.so.0 => /usr/lib64/libxcb-dri3.so.0 (0x00007fb56e4e5000) 
             libxcb-present.so.0 => /usr/lib64/libxcb-present.so.0 (0x00007fb56e4e0000) 
             libxcb-sync.so.1 => /usr/lib64/libxcb-sync.so.1 (0x00007fb56e4d6000) 
             libxshmfence.so.1 => /usr/lib64/libxshmfence.so.1 (0x00007fb56e4d1000) 
             libfreetype.so.6 => /usr/lib64/libfreetype.so.6 (0x00007fb56e406000) 
             libgraphite2.so.3 => /usr/lib64/libgraphite2.so.3 (0x00007fb56e3e3000) 
             libclangCrossTU.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libclangCrossTU.so.8 (0x00007fb56e3d6000) 
             libclangTidyUtils.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libclangTidyUtils.so.8 (0x00007fb56e35d000) 
             libclangStaticAnalyzerCheckers.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libclangStaticAnalyzerCheckers.so.8 (0x00007fb56df2a000) 
             libclangStaticAnalyzerFrontend.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libclangStaticAnalyzerFrontend.so.8 (0x00007fb56ded0000) 
             libfindAllSymbols.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libfindAllSymbols.so.8 (0x00007fb56de58000) 
             libLLVMObject.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libLLVMObject.so.8 (0x00007fb56dd73000) 
             libLLVMDebugInfoCodeView.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libLLVMDebugInfoCodeView.so.8 (0x00007fb56dcb3000) 
             libLLVMBitWriter.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libLLVMBitWriter.so.8 (0x00007fb56dc6b000) 
             libLLVMAggressiveInstCombine.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libLLVMAggressiveInstCombine.so.8 (0x00007fb56dc57000) 
             libLLVMIRReader.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libLLVMIRReader.so.8 (0x00007fb56dc4e000) 
             libLLVMInstCombine.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libLLVMInstCombine.so.8 (0x00007fb56db2e000) 
             libLLVMInstrumentation.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libLLVMInstrumentation.so.8 (0x00007fb56da08000) 
             libLLVMLinker.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libLLVMLinker.so.8 (0x00007fb56d9e4000) 
             libclangToolingInclusions.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/libclangToolingInclusions.so.8 (0x00007fb56d9d4000) 
             libgpg-error.so.0 => /usr/lib64/libgpg-error.so.0 (0x00007fb56d9b2000) 
             libXau.so.6 => /usr/lib64/libXau.so.6 (0x00007fb56d9ad000) 
             libXdmcp.so.6 => /usr/lib64/libXdmcp.so.6 (0x00007fb56d9a6000) 
             libbz2.so.1 => /lib64/libbz2.so.1 (0x00007fb56d991000) 
             libLLVMAsmParser.so.8 => /usr/lib/llvm/8/lib64/../lib64/../lib64/../lib64/../lib64/libLLVMAsmParser.so.8 (0x00007fb56d91b000) 
             libbsd.so.0 => /usr/lib64/libbsd.so.0 (0x00007fb56d903000)
      

        1. Screenshot_20191205_223326.png
          429 kB
          Bartłomiej Burdukiewicz
        2. 4.11.log
          420 kB
          Oleg Shalnev
        3. qtcreator-4.10.2.log
          12 kB
          Bartłomiej Burdukiewicz
        4. qtcreator-4.11.0.log
          10 kB
          Bartłomiej Burdukiewicz
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            dev1990 Bartłomiej Burdukiewicz
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes